修复推荐系统: 6卡片网格+LLM分析换一批+移除随机配方
- 推荐卡片从3条扩展到最多9条, 3列网格布局
- 换一批: LLM深度分析→分析结果作为推荐理由+shuffle打乱卡片
- 移除随机配方逻辑, 配方由关键词匹配决定
- deepTechniqueThink简化为直接委托TechniqueExecutor